styles.css
form {
    margin-bottom: 20px;
    position: relative;
    z-index: -1;
}

label, input {
    display: block;
    margin-bottom: 10px;
    margin-top: 10px;
}

button {
    padding: 5px 10px;
    border-radius: 10px;
    border-color: green !important;
}

#piechart {
    width: 900px;
    height: 500px;
}

img {
    height: 600px;
    margin-top: 5px;
    margin-bottom: 5px;
    border-radius: 10px;
    box-shadow: -8px 8px 8px rgba(0, 0, 0, 0.5);
}

 .logo {
    margin-bottom: 5px;
    box-shadow: none;
 }

 .coin-small {
    height: 25px;
 }
 #piechart {
    color: black;
    width: 100%;
    height: 391px;
    margin-top: 20px;
    box-shadow: -8px 8px 8px rgba(0, 0, 0, 0.5);
 }

 body {
    font-family: 'Luckiest Guy', sans-serif;
    background-color: #f8f9fa;
    /* overflow: hidden; */ /* Hiding the scrollbar locks the page from scrolling and wont work*/
    display: flex;
    flex-direction: column;
}

.coin {
    height: 38px;
    margin-top: auto;
}

table {
    width: 100%;
    border-collapse: collapse;
    margin-top: 20px;
    box-shadow: -8px 8px 8px rgba(0, 0, 0, 0.5);
}
th, td {
    border: 1px solid #ddd;
    padding: 8px;
    text-align: right;
}
th {
    color: white;
    font-weight: 100;
    background-color: green;
}

footer, nav, button {
    background-color: green !important;
    color: white !important;
}

footer a {
    color: white;
}

footer a:hover {
    color: white;
    opacity: 50%;
}

body, html {
    height: 100%;
    margin: 0;
    padding: 0;
  }

::-webkit-scrollbar {
    width: .01px;
  }

#copyIcon {
    cursor: pointer;
}

.notifications .toast {
    width: 400px;
    position: relative;
    overflow: hidden;
    list-style: none;
    border-radius: 4px;
    padding: 16px 17px;
    margin-bottom: 10px;
    background: var(--light);
    justify-content: space-between;
    animation: show_toast 0.3s ease forwards;
    z-index: 9999; /* Ensure toast is on top of other elements */
    opacity: 1 !important; /* Force toast to be visible */
    visibility: visible !important; /* Force toast to be visible */
  }
  .notifications {
    position: fixed;
    top: 30px;
    right: 20px;
  }
  .notifications :where(.toast, .column) {
    display: flex;
    align-items: center;
  }
  .notifications .toast::before {
    position: absolute;
    content: "";
    height: 3px;
    width: 100%;
    bottom: 0px;
    left: 0px;
    animation: progress 5s linear forwards;
  }
  
  @keyframes show_toast {
    0% {
      transform: translateX(100%);
    }
    40% {
      transform: translateX(-5%);
    }
    80% {
      transform: translateX(0%);
    }
    100% {
      transform: translateX(-10px);
    }
  }

  .notifications .toast.hide {
    animation: hide_toast 0.3s ease forwards !important;
  }
  
  @keyframes hide_toast {
    0% {
      transform: translateX(-10px);
    }
    40% {
      transform: translateX(0%);
    }
    80% {
      transform: translateX(-5%);
    }
    100% {
      transform: translateX(calc(100% + 20px));
    }
  }
  .toast::before {
    position: absolute;
    content: "";
    height: 3px;
    width: 100%;
    bottom: 0px;
    left: 0px;
    animation: progress 5s linear forwards;
  }
  @keyframes progress {
    100% {
      width: 0%;
    }
  }
  .toast.success::before, .hl-div#success {
    background: var(--success);
  }
  
  .toast.error::before, .hl-div#error {
    background: var(--error);
  }
  
  .toast.warning::before, .hl-div#warning {
    background: var(--warning);
  }
  
  .toast.info::before, .hl-div#info {
    background: var(--info);
  }
  
  .toast .column i {
    font-size: 1.75rem;
  }
  
  .toast.success .column i {
    color: var(--success);
  }
  
  .toast.error .column i {
    color: var(--error);
  }
  
  .toast.warning .column i {
    color: var(--warning);
  }
  
  .toast.info .column i {
    color: var(--info);
  }
  
  .toast .column span {
    font-size: 1.07rem;
    margin-left: 12px;
  }
  
  .toast i:last-child {
    color: #aeb0d7;
    cursor: pointer;
  }
  
  .toast i:last-child:hover {
    color: var(--dark);
  }
  
  @media screen and (max-width: 530px) {
    .notifications {
      width: 95%;
    }
    .notifications .toast {
      width: 100%;
      font-size: 1rem;
      margin-left: 20px;
    }
    .holding-div .hl-div {
      margin: 0 1px;
      font-size: 1.1rem;
      padding: 8px 15px;
    }
  }
  

